swig wrapped mfinder code is finally functioning (at least for plain jane motif structure calcs)

--- a/mfinder1.2/Makefile
+++ b/mfinder1.2/Makefile
@@ -1,22 +1,46 @@
 # 
 CC=gcc
 # 
-CFLAGS=-c -Wall -O3 -DUNIX=1
+CFLAGS=-fpic -c -Wall -O3 -D UNIX -I/usr/include/python2.7/
+#
+LDFLAGS=-lm -O3 -shared
+#
+LD=ld
+#
 
-LDFLAGS= -lm -O3
+#
+SWIG=swig
+#
+SWIGFLAGS=-python
 
-FILES=main clustering  grassberger  hash  list mat  metropolis  motif_ids  output  permutation  prob  random  results  role  stubs  switches
-SOURCES=$(FILES:=.c)
-OBJECTS=$(FILES:=.o)
+MF_FILES=clustering grassberger hash list mat metropolis motif_ids \
+         output permutation prob random results role stubs switches
+SWIG_FILES=mfinder wrapper
+
+MF_OBJECTS=$(MF_FILES:=.o)
+SWIG_OBJECTS=$(SWIG_FILES:=.o) 
+
 EXECUTABLES=mfinder
+LIBRARIES=_mfinder.so
 
-all: $(SOURCES) $(EXECUTABLES)
-	
-$(EXECUTABLES): $(OBJECTS) 
-	$(CC) $(OBJECTS) -o $(EXECUTABLES) $(LDFLAGS)
+all: $(EXECUTABLES) $(LIBRARIES)
 
-$(FILES):
-	$(CC) $(CFLAGS) $@.c -o $@.o
+_mfinder.so: $(MF_OBJECTS) $(SWIG_OBJECTS)
+	$(LD) $(LDFLAGS) -o _mfinder.so $(MF_OBJECTS) $(SWIG_OBJECTS)
+
+$(EXECUTABLES): $(MF_OBJECTS) main.o
+	$(CC) $(MF_OBJECTS) main.o -o $(EXECUTABLES) $(LDFLAGS)
+
+# clear out all suffixes
+.SUFFIXES:
+# clear out all suffixes
+.SUFFIXES: .o .c .i
+
+.c.o:
+	$(CC) $(CFLAGS) $<
+
+.i.c:
+	$(SWIG) $(SWIGFLAGS) -o $@ $<
 
 clean:
-	rm -rf *o mfinder
+	rm -rf main.o mfinder.py $(MF_OBJECTS) $(SWIG_OBJECTS) $(EXECUTABLES) $(LIBRARIES)
