Added a list to keep track of self edges (since they get "lost" in the original mfinder when you don't want them to feature in motifs) Added a function to return a randomized version of an input network Should probably figure out a better work around than the globals.h file

--- a/mfinder/Makefile
+++ b/mfinder/Makefile
@@ -13,7 +13,7 @@ SWIG=swig
 #
 SWIGFLAGS=-python
 
-MF_FILES=clustering grassberger hash list mat metropolis motif_ids \
+MF_FILES=clustering globals grassberger hash list mat metropolis motif_ids \
          output permutation prob random results role stubs switches
 SWIG_FILES=mfinder wrapper
 
